--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FoodTwo</string>
+    <string name="app_name">Fast Food</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="random_text_1">
@@ -39,4 +39,7 @@
           and Big Data Technology. Companies are investing big in it and it will become
           an in-demand skill in the future.
     </string>
+    <string name="please_check_your_internet_connection">Please check your internet connection</string>
+    <string name="ok">Ok</string>
+    <string name="error">Error</string>
 </resources>
